--- a/syllabus.tex
+++ b/syllabus.tex
@@ -260,11 +260,11 @@ Lessons Learned, Imbens and Xu (2024)}$^{**}$
     \end{itemize}
   \item Class 8: Penalized linear regression
     \begin{itemize}
+      \item \textbf{``Machine learning: an applied econometric approach'' Mullainathan and Spiess(2017)}
     \item ``Regression shrinkage and selection via the lasso'' Tibshiriani (1996)
     \item ``The adaptive lasso and its oracle properties'', Zou (2006)
     \item ``Sparse estimators and the oracle property, or the return of Hodges' estimator'' Leeb and Potscher (2008)
     \item ``Preconditioning the lasso for sign consistency'' Jia and Rohe (2015)
-    \item ``Machine learning: an applied econometric approach'' Mullainathan and Spiess (2017)
     \item ``Double/debiased/neyman machine learning of treatment effects'' Chernozhukov et al. (2017)
     \item ``Double/debiased machine learning for treatment and structural parameters'' Chernozhukov et al. (2018)
     \item ``Generic machine learning inference on heterogenous treatment effects in randomized experiments'' Chernozhukov et al. (2020)      
@@ -279,6 +279,7 @@ Lessons Learned, Imbens and Xu (2024)}$^{**}$
   \begin{enumerate}
   \item Class 9: Binary Discrete Choice, GLM and Computational Methods
     \begin{itemize}
+      \item \textbf{``Logs with zeros? Some problems and solutions'' Chen and Roth (2024)}
     \item ``Discrete Choice Methods with Simulation'' Train (2009) \url{https://eml.berkeley.edu/books/choice2.html}
     \item ``Analysis of covariance with qualitative data'' Chamberlain (1980)
     \item ``Binary Response Models for Panel Data: Identification and Information'' Chamberlain (2010)
@@ -286,6 +287,7 @@ Lessons Learned, Imbens and Xu (2024)}$^{**}$
     \end{itemize}
   \item Class 10: Multiple Discrete Choices
     \begin{itemize}
+      \item \textbf{``Economic Choices''  (2001, American Economic Review) Daniel Mcfadden }
     \item ``Best practices for differentiated products demand estimation with pyblp'' Conlon and Gortmaker (2020)
     \item ``Bayesian analysis of random coefficient models using aggregate data'' Jiang, Manchanda, and Rossi (2009)
     \item ``Improving the Numerical Performance of Static and Dynamic Aggregate Discrete Choice Random Coefficients Demand Estimation'' Dub\'e, Fox, and Su (2012)
@@ -295,7 +297,7 @@ Lessons Learned, Imbens and Xu (2024)}$^{**}$
     \begin{itemize}
     \item ``Econometric Methods for the Duration of Unemployment'', Lancaster (1979)
     \item ``Generalised residuals and heterogeneous duration models: With applications to the Weilbull model'', Lancaster (1985)
-    \item ``Duration Dependence and Labor Market Conditions: Evidence from a Field Experiment'', Kroft, Lange and Notowidigdo (2013)
+    \item \textbf{``Duration Dependence and Labor Market Conditions: Evidence from a Field Experiment'', Kroft, Lange and Notowidigdo (2013)}
     \item ``Economic duration data and hazard functions'', Kiefer (1988)
     \item ``Duration Models: Specification, Identification and Multiple Durations'', Van Den Berg (2001)
     \item ``Autoregressive Conditional Duration: A New Model for Irregularly Spaced Transaction Data'', Engle and Russell (1998)
@@ -305,7 +307,7 @@ Lessons Learned, Imbens and Xu (2024)}$^{**}$
   \item Class 12: Hierarchical modeling + Bayesian Shrinkage
     \begin{itemize}
     \item ``The Impacts of Neighborhoods on Intergenerational Mobility II: County-Level Estimates'' Chetty and Hendren (2018)
-    \item ``Understanding the average impact of microcredit expansions: A bayesian hierarchical analysis of seven randomized experiments'' Meager (2019)
+    \item \textbf{``Understanding the average impact of microcredit expansions: A bayesian hierarchical analysis of seven randomized experiments'' Meager (2019)}
     \item ``Investing for the Long Run when Returns Are Predictable.'' Barberis (2000)
     \item ``Is there a replication crisis in finance?'' Jensen, Kelly and Pedersen (2021)
       \item ``SI 2022 Methods Lectures - Empirical Bayes Methods, Theory and Application'', Gu and Walters (2022) \url{https://www.nber.org/conferences/si-2022-methods-lectures-empirical-bayes-methods-theory-and-application}
